--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "@vercel/analytics": "^0.1.5",
     "next": "13.0.6",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
